adding doc to service part4